# QLaibLib

./: .gitignore  QuTAG_MC.py  README.md  Server.py  compile_commands.json  gap.sh  process_bin_file.py  pyproject.toml
coincfinder/: CMakeLists.txt
coincfinder/include/: ReadCSV.h
coincfinder/src/: ReadCSV.cpp  bindings.cpp
qlaiblib/: __init__.py  cli.py
qlaiblib/acquisition/: file_replay.py  qutag.py
qlaiblib/coincidence/: delays.py  specs.py
qlaiblib/io/: coincfinder_backend.py
qlaiblib/live/: controller.py  history.py  tk_dashboard.py
qlaiblib/metrics/: __init__.py  chsh.py
qlaiblib/plotting/: static.py  timeseries.py
scripts/: flatten_vs_bins.py
