[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qlaiblib"
version = "0.1.0"
description = "Toolkit for singles counting, coincidences, metrics, and live plotting for QuTAG/coincfinder setups."
readme = "README.md"
authors = [
  {name = "Adrian Bogdan", email = "adrian@example.com"},
  {name = "Codex Assistant"}
]
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "matplotlib>=3.8",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pytest>=7.0",
]

[project.scripts]
qlaib = "qlaiblib.cli:main"
